# FileSenderCli

./: 404.html  LICENSE  README.md  benchmark.ipynb  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: build.yml
Python API/: index.html
Python API/benchmark/: index.html
Python API/request_types/: index.html
Python API/response_types/: index.html
benchmark/: index.html
changelog/: index.html
cli/: index.html
docs/: benchmark.ipynb  changelog.md  index.md
docs/Python API/: benchmark.md  index.md  request_types.md  response_types.md
filesender/: __init__.py  api.py  auth.py  benchmark.py  config.py  download.py  log.py  main.py  request_types.py  response_types.py
test/: .test_client.py.swp  README.md  conftest.py  test_cli.py  test_client.py  test_utils.py
