[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "filesender-client"
description = "FileSender Python CLI and API client"
version = "1.3.0"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["one", "two"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "aiostream",
    "aiofiles",
    # --base-url is treated as an argument in 0.9.0-0.9.1
    "typer>=0.9.2",
    "beautifulsoup4",
    "rich",
    "httpx",
    # See: https://github.com/encode/httpcore/pull/883
    "httpcore >= 1.0.3",
    "cryptography",
    "typing_extensions"
]

[tool.setuptools.packages.find]
exclude = ["site", "test"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest_asyncio",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-typer",
    "mkdocs-jupyter",
    "pymdown-extensions",
    "pygments",
    "black",
    "seaborn",
    "pandas"
]

[project.scripts]
filesender = "filesender.main:app"

[tool.pyright]
typeCheckingMode = "strict"
exclude = ["venv", "test"]
